[metadata]
name = AnkiIn
version = 0.0.3
author = Clouder
author_email = clouder0@outlook.com
description = Import markdown to Anki
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/clouder0/AnkiIn
project_urls =
    Bug Tracker = https://github.com/Clouder0/AnkiIn/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    genanki==0.11.0
    markdown2==2.4.0
    regex
python_requires = >=3.6
